# modelbox-modelarts-plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  merge-request.yml
CMake/: FindMQTT.cmake  Function.cmake  Options.cmake  SecureCompilerOption.cmake
src/: CMakeLists.txt
src/modelarts_client/: CMakeLists.txt  modelarts_client.cc
src/modelarts_client/common/: cipher.cc  config.cc  utils.cc
src/modelarts_client/communicate/: communication.cc  communication_factory.cc  restful_communication.cc
src/modelarts_client/include/: cipher.h  communication.h  communication_factory.h  config.h  log.h  modelarts_client.h  restful_communication.h  status.h  task_io.h  task_manager.h  utils.h
src/modelarts_client/task/: task_io.cc  task_manager.cc
src/modelarts_plugin/: CMakeLists.txt  modelarts_manager.cc  modelarts_plugin.cc  modelarts_task.cc
src/modelarts_plugin/include/: modelarts_manager.h  modelarts_plugin.h  modelarts_task.h
test/: CMakeLists.txt  test_config.h.in  test_main.cc
test/assets/cert/: app_pri_key
test/common/: CMakeLists.txt  test_case_base.cc  test_case_base.h  test_case_utils.cc  test_case_utils.h
test/mock_server/: CMakeLists.txt  ma_mock_server.cc  ma_mock_server.h  webhook_mock_server.cc  webhook_mock_server.h
test/modelarts_plugin_test/: CMakeLists.txt  test_case_create_task.cc  test_case_create_task.h
test/modelarts_plugin_test/graph/: create_task_case.toml.in
